--- a/public/assets/json/pt/SeasonalExpedition.lang.json
+++ b/public/assets/json/pt/SeasonalExpedition.lang.json
@@ -19,7 +19,7 @@
         "DescriptionDone": "Fase 1 concluída",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "FIND_SHIP",
             "Id": "seas-1-expedPhase-1-milestone-1",
             "Title": "Primeiros Passos",
             "Description": "Localiza a tua nave espacial",
@@ -54,7 +54,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "LEAVE_PLANET",
             "Id": "seas-1-expedPhase-1-milestone-2",
             "Title": "Descolagem",
             "Description": "Sair do planeta",
@@ -105,7 +105,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "LEAVE_SYSTEM",
             "Id": "seas-1-expedPhase-1-milestone-3",
             "Title": "Interestelar",
             "Description": "Viaja a velocidade warp para um novo sistema",
@@ -132,7 +132,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "BUILD_BASE",
             "Id": "seas-1-expedPhase-1-milestone-4",
             "Title": "Chegada a casa",
             "Description": "Estabelece uma base",
@@ -167,7 +167,7 @@
             ]
           },
           {
-            "MissionId": "DISC_CREATURES",
+            "MissionId": "BASIC_SCAN_CRE",
             "Id": "seas-1-expedPhase-1-milestone-5",
             "Title": "Naturalista",
             "Description": "Descobre criaturas: 0/20",
@@ -198,7 +198,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_FREIGHTER",
             "Id": "seas-1-expedPhase-1-milestone-6",
             "Title": "Capitão no convés",
             "Description": "Compra uma nave capital",
@@ -253,7 +253,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "WALKER",
             "Id": "seas-1-expedPhase-1-milestone-7",
             "Title": "O Peregrino",
             "Description": "Explora a pé: 0 u/10000 u",
@@ -288,7 +288,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET1",
             "Id": "seas-1-expedPhase-1-milestone-8",
             "Title": "Ponto de encontro 1",
             "Description": "Alcança o primeiro ponto de encontro",
@@ -402,7 +402,7 @@
         "DescriptionDone": "Fase 2 concluída",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET2",
             "Id": "seas-1-expedPhase-2-milestone-1",
             "Title": "Ponto de encontro 2",
             "Description": "Alcança o segundo ponto de encontro",
@@ -488,7 +488,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FARMER",
             "Id": "seas-1-expedPhase-2-milestone-3",
             "Title": "Agricultor",
             "Description": "Cultiva plantas: 0/35",
@@ -595,7 +595,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FIRST_CONTACT",
             "Id": "seas-1-expedPhase-2-milestone-4",
             "Title": "Primeiro contacto",
             "Description": "Descobre um novo sistema",
@@ -622,7 +622,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "BLACKHOLE",
             "Id": "seas-1-expedPhase-2-milestone-5",
             "Title": "Horizonte de Eventos",
             "Description": "Entra num buraco negro",
@@ -641,7 +641,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FALLING",
             "Id": "seas-1-expedPhase-2-milestone-6",
             "Title": "Foguetão Humano",
             "Description": "Passa 30 segundos no ar",
@@ -676,7 +676,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STAR_RED",
             "Id": "seas-1-expedPhase-2-milestone-7",
             "Title": "Céu Escarlate",
             "Description": "Visita uma estrela vermelha",
@@ -719,7 +719,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_CASH",
             "Id": "seas-1-expedPhase-2-milestone-8",
             "Title": "Sacos de Dinheiro",
             "Description": "Obtém unidades: 0/6000000",
@@ -775,7 +775,7 @@
         "DescriptionDone": "Fase 3 concluída",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET3",
             "Id": "seas-1-expedPhase-3-milestone-1",
             "Title": "Ponto de encontro 3",
             "Description": "Alcança o terceiro ponto de encontro",
@@ -826,7 +826,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "PROC_PRODS",
             "Id": "seas-1-expedPhase-3-milestone-2",
             "Title": "O Colecionador",
             "Description": "Recolhe artefactos antigos: 0/10",
@@ -854,7 +854,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FLEETMISS",
             "Id": "seas-1-expedPhase-3-milestone-3",
             "Title": "Controlo de missão",
             "Description": "Conclui expedições de frota: 0/15",
@@ -885,7 +885,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_NANITES",
             "Id": "seas-1-expedPhase-3-milestone-4",
             "Title": "Horda de aglomerados",
             "Description": "Obtém nanites: 0/5000",
@@ -928,7 +928,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "WEAPON_RANK",
             "Id": "seas-1-expedPhase-3-milestone-5",
             "Title": "Espetáculo de Luz",
             "Description": "Adquire Multiferramenta A-Class",
@@ -963,7 +963,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_PETS",
             "Id": "seas-1-expedPhase-3-milestone-6",
             "Title": "Companheirismo",
             "Description": "Adota companheiros: 0/4",
@@ -1014,7 +1014,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STAR_GREEN",
             "Id": "seas-1-expedPhase-3-milestone-7",
             "Title": "Sonhos Esmeralda",
             "Description": "Visita uma estrela verde",
@@ -1057,7 +1057,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SPACE_POI",
             "Id": "seas-1-expedPhase-3-milestone-8",
             "Title": "Singularidade Espacial",
             "Description": "Encontra anomalias no espaço profundo: 0/5",
@@ -1123,7 +1123,7 @@
         "DescriptionDone": "Fase 4 concluída",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET4",
             "Id": "seas-1-expedPhase-4-milestone-1",
             "Title": "Ponto de encontro 4",
             "Description": "Alcança o quarto ponto de encontro",
@@ -1174,7 +1174,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "WORDS_ALL",
             "Id": "seas-1-expedPhase-4-milestone-2",
             "Title": "Amante das Letras",
             "Description": "Aprende palavras alienígenas: 0/50",
@@ -1245,7 +1245,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SHIP_RANK",
             "Id": "seas-1-expedPhase-4-milestone-3",
             "Title": "A Boa Nave",
             "Description": "Adquire nave espacial A-Class",
@@ -1266,7 +1266,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STAR_BLUE",
             "Id": "seas-1-expedPhase-4-milestone-4",
             "Title": "Extensão Azul",
             "Description": "Visita uma estrela azul",
@@ -1309,7 +1309,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FIEND_EGG",
             "Id": "seas-1-expedPhase-4-milestone-5",
             "Title": "Ladrão de ninhos",
             "Description": "Rouba ovos sussurrantes: 0/30",
@@ -1344,7 +1344,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "DISC_SYSTEM",
             "Id": "seas-1-expedPhase-4-milestone-6",
             "Title": "Desconhecido",
             "Description": "Descobre sistemas: 0/35",
@@ -1383,7 +1383,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "RANK_EGUILD",
             "Id": "seas-1-expedPhase-4-milestone-7",
             "Title": "Explorador famoso",
             "Description": "Ganha reputação na Guilda dos Exploradores: 0/30",
@@ -1430,7 +1430,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "DO_ABAND_F",
             "Id": "seas-1-expedPhase-4-milestone-8",
             "Title": "Purificado pelo fogo",
             "Description": "Explora um cargueiro abandonado na totalidade",
@@ -1540,7 +1540,7 @@
         "DescriptionDone": "Fase 5 concluída",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET5",
             "Id": "seas-1-expedPhase-5-milestone-1",
             "Title": "Ponto de encontro 5",
             "Description": "Alcança o último ponto de encontro",
@@ -1591,7 +1591,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "EXTREME",
             "Id": "seas-1-expedPhase-5-milestone-2",
             "Title": "O Sobrevivente",
             "Description": "Explora mundos extremos: 0u/10000u",
@@ -1685,7 +1685,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SENTINEL_KILL",
             "Id": "seas-1-expedPhase-5-milestone-4",
             "Title": "Falha na fronteira",
             "Description": "Elimina Sentinelas: 0/50",
@@ -1714,7 +1714,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SELL_FOR_CASH",
             "Id": "seas-1-expedPhase-5-milestone-5",
             "Title": "O Jackpot",
             "Description": "Obtém 1000000 unidades numa única venda",
@@ -1789,7 +1789,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "ABANDONED_SYS",
             "Id": "seas-1-expedPhase-5-milestone-6",
             "Title": "Perdido no espaço",
             "Description": "Descobre um sistema abandonado",
@@ -1824,7 +1824,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "DISC_WAYPOINT",
             "Id": "seas-1-expedPhase-5-milestone-7",
             "Title": "O Navegador",
             "Description": "Cartografa pontos de rota: 0/60",
@@ -1859,7 +1859,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STORM_CRYSTALS",
             "Id": "seas-1-expedPhase-5-milestone-8",
             "Title": "Céus de tempestade",
             "Description": "Recolhe cristais de tempestade: 0/50",
@@ -16123,7 +16123,7 @@
             "Id": "seas-8-expedPhase-1-milestone-1",
             "Title": "Registo 1: Emergência",
             "Description": "Lê a primeira entrada no registo do navio",
-            "DescriptionDone": "Lê o primeiro registo",
+            "DescriptionDone": "Leste o primeiro registo",
             "Icon": "milestonePatches/PATCH.SHIPLOG1.png",
             "Type": "Normal",
             "Rewards": [
@@ -16185,7 +16185,7 @@
             "MissionId": "FIX_FREIGHTER",
             "Id": "seas-8-expedPhase-1-milestone-2",
             "Title": "Mãos à Obra",
-            "Description": "Reparar sistemas vitais do cargueiro",
+            "Description": "Repara sistemas vitais do cargueiro",
             "DescriptionDone": "Sistemas cruciais do cargueiro repostos",
             "Icon": "milestonePatches/PATCH.FREIGHTER2.png",
             "Type": "Normal",
@@ -16280,7 +16280,7 @@
             "Id": "seas-8-expedPhase-1-milestone-4",
             "Title": "Uma máquina bem lubrificada",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.REFINER.png",
             "Type": "Normal",
             "Rewards": [
@@ -16342,7 +16342,7 @@
             "Id": "seas-8-expedPhase-1-milestone-6",
             "Title": "Supercarga",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.STORAGE.png",
             "Type": "Normal",
             "Rewards": [
@@ -16558,7 +16558,7 @@
             "Id": "seas-8-expedPhase-2-milestone-1",
             "Title": "Registo 2: Escuridão Adentro",
             "Description": "Lê a segunda entrada no registo do navio",
-            "DescriptionDone": "Lê o segundo registo",
+            "DescriptionDone": "Leste o segundo registo",
             "Icon": "milestonePatches/PATCH.SHIPLOG2.png",
             "Type": "Normal",
             "Rewards": [
@@ -16643,8 +16643,8 @@
             "MissionId": "BUILD_PART_F",
             "Id": "seas-8-expedPhase-2-milestone-3",
             "Title": "Protocolo de Escape",
-            "Description": "Construir um <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "Description": "Construir <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.EXCOCRAFT.png",
             "Type": "Normal",
             "Rewards": [
@@ -16722,7 +16722,7 @@
             "Id": "seas-8-expedPhase-2-milestone-5",
             "Title": "Através do Infinito",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.BASE.png",
             "Type": "Normal",
             "Rewards": [
@@ -16792,7 +16792,7 @@
             "Id": "seas-8-expedPhase-2-milestone-7",
             "Title": "O Ar que Respiramos",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.HARVEST.png",
             "Type": "Normal",
             "Rewards": [
@@ -16985,7 +16985,7 @@
             "Id": "seas-8-expedPhase-3-milestone-1",
             "Title": "Registo 3: Nostálgico",
             "Description": "Lê a terceira entrada no registo do navio",
-            "DescriptionDone": "Lê o terceiro registo",
+            "DescriptionDone": "Leste o terceiro registo",
             "Icon": "milestonePatches/PATCH.SHIPLOG3.png",
             "Type": "Normal",
             "Rewards": [
@@ -17211,7 +17211,7 @@
             "Id": "seas-8-expedPhase-3-milestone-3",
             "Title": "Energia e Indústria",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.POWER.png",
             "Type": "Normal",
             "Rewards": [
@@ -17431,7 +17431,7 @@
             "Id": "seas-8-expedPhase-3-milestone-7",
             "Title": "Vidente",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.PLANET.png",
             "Type": "Normal",
             "Rewards": [
@@ -17466,7 +17466,7 @@
             "Id": "seas-8-expedPhase-3-milestone-8",
             "Title": "Confortos Domésticos",
             "Description": "Construir: <TECHNOLOGY><>",
-            "DescriptionDone": "Instalaste um <TECHNOLOGY><>",
+            "DescriptionDone": "Instalaste <TECHNOLOGY><>",
             "Icon": "milestonePatches/PATCH.FREIGHTER.TRADE.png",
             "Type": "Normal",
             "Rewards": [
@@ -17544,7 +17544,7 @@
             "Id": "seas-8-expedPhase-4-milestone-1",
             "Title": "Registo 4: Não Há Volta Atrás",
             "Description": "Lê a quarta entrada no registo do navio",
-            "DescriptionDone": "Lê o quarto registo",
+            "DescriptionDone": "Leste o quarto registo",
             "Icon": "milestonePatches/PATCH.SHIPLOG4.png",
             "Type": "Normal",
             "Rewards": [
@@ -17872,7 +17872,7 @@
             "Id": "seas-8-expedPhase-5-milestone-1",
             "Title": "Registo 5: Horizontes",
             "Description": "Lê a última entrada no registo do cruzeiro",
-            "DescriptionDone": "Lê o registo final",
+            "DescriptionDone": "Leste o registo final",
             "Icon": "milestonePatches/PATCH.SHIPLOG5.png",
             "Type": "Normal",
             "Rewards": [
@@ -18071,7 +18071,7 @@
             "MissionId": "CIV_POD_POI",
             "Id": "seas-8-expedPhase-5-milestone-5",
             "Title": "Cruzeiro do Sono Profundo",
-            "Description": "Descobre uma civilização perdida",
+            "Description": "Fazer contacto",
             "DescriptionDone": "Reunido com os perdidos",
             "Icon": "milestonePatches/PATCH.POI.png",
             "Type": "Normal",
