--- a/public/assets/json/zh-hans/SeasonalExpedition.lang.json
+++ b/public/assets/json/zh-hans/SeasonalExpedition.lang.json
@@ -19,7 +19,7 @@
         "DescriptionDone": "完成阶段 I",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "FIND_SHIP",
             "Id": "seas-1-expedPhase-1-milestone-1",
             "Title": "初始步骤",
             "Description": "定位你的飞船",
@@ -54,7 +54,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "LEAVE_PLANET",
             "Id": "seas-1-expedPhase-1-milestone-2",
             "Title": "起飞",
             "Description": "离开行星",
@@ -105,7 +105,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "LEAVE_SYSTEM",
             "Id": "seas-1-expedPhase-1-milestone-3",
             "Title": "星际",
             "Description": "曲速飞行到新的恒星系",
@@ -132,7 +132,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "BUILD_BASE",
             "Id": "seas-1-expedPhase-1-milestone-4",
             "Title": "返航",
             "Description": "建造一个基地",
@@ -167,7 +167,7 @@
             ]
           },
           {
-            "MissionId": "DISC_CREATURES",
+            "MissionId": "BASIC_SCAN_CRE",
             "Id": "seas-1-expedPhase-1-milestone-5",
             "Title": "博物学者",
             "Description": "发现生物：0/20",
@@ -198,7 +198,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_FREIGHTER",
             "Id": "seas-1-expedPhase-1-milestone-6",
             "Title": "一船之主",
             "Description": "购买一艘主力飞船",
@@ -253,7 +253,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "WALKER",
             "Id": "seas-1-expedPhase-1-milestone-7",
             "Title": "朝圣者",
             "Description": "步行探索：0u/10000u",
@@ -288,7 +288,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET1",
             "Id": "seas-1-expedPhase-1-milestone-8",
             "Title": "会面点1",
             "Description": "抵达第一个会面点",
@@ -402,7 +402,7 @@
         "DescriptionDone": "完成阶段 II",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET2",
             "Id": "seas-1-expedPhase-2-milestone-1",
             "Title": "会面点2",
             "Description": "抵达第二个会面点",
@@ -488,7 +488,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FARMER",
             "Id": "seas-1-expedPhase-2-milestone-3",
             "Title": "农民",
             "Description": "培育植物：0/35",
@@ -595,7 +595,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FIRST_CONTACT",
             "Id": "seas-1-expedPhase-2-milestone-4",
             "Title": "首次接触",
             "Description": "发现一个新恒星系",
@@ -622,7 +622,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "BLACKHOLE",
             "Id": "seas-1-expedPhase-2-milestone-5",
             "Title": "事件视界",
             "Description": "进入黑洞",
@@ -641,7 +641,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FALLING",
             "Id": "seas-1-expedPhase-2-milestone-6",
             "Title": "火箭人",
             "Description": "在空中停留30秒",
@@ -676,7 +676,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STAR_RED",
             "Id": "seas-1-expedPhase-2-milestone-7",
             "Title": "红色天空",
             "Description": "访问一颗红色恒星",
@@ -719,7 +719,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_CASH",
             "Id": "seas-1-expedPhase-2-milestone-8",
             "Title": "钱袋",
             "Description": "获取货币：0／6000000",
@@ -775,7 +775,7 @@
         "DescriptionDone": "完成阶段 III",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET3",
             "Id": "seas-1-expedPhase-3-milestone-1",
             "Title": "会面点3",
             "Description": "抵达第三个会面点",
@@ -826,7 +826,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "PROC_PRODS",
             "Id": "seas-1-expedPhase-3-milestone-2",
             "Title": "收集者",
             "Description": "收集古代遗物：0/10",
@@ -854,7 +854,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FLEETMISS",
             "Id": "seas-1-expedPhase-3-milestone-3",
             "Title": "任务控制",
             "Description": "完成舰队远征：0/15",
@@ -885,7 +885,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_NANITES",
             "Id": "seas-1-expedPhase-3-milestone-4",
             "Title": "星团集群",
             "Description": "获取纳米星团：0／5000",
@@ -928,7 +928,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "WEAPON_RANK",
             "Id": "seas-1-expedPhase-3-milestone-5",
             "Title": "灯光表演",
             "Description": "获得A-Class多用途工具",
@@ -963,7 +963,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "GOT_PETS",
             "Id": "seas-1-expedPhase-3-milestone-6",
             "Title": "同伴",
             "Description": "收养同伴：0/4",
@@ -1014,7 +1014,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STAR_GREEN",
             "Id": "seas-1-expedPhase-3-milestone-7",
             "Title": "翡翠梦境",
             "Description": "访问一颗绿色恒星",
@@ -1057,7 +1057,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SPACE_POI",
             "Id": "seas-1-expedPhase-3-milestone-8",
             "Title": "太空异常现象",
             "Description": "找到深空异象：0/5",
@@ -1123,7 +1123,7 @@
         "DescriptionDone": "完成阶段 IV",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET4",
             "Id": "seas-1-expedPhase-4-milestone-1",
             "Title": "会面点4",
             "Description": "抵达第四个会面点",
@@ -1174,7 +1174,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "WORDS_ALL",
             "Id": "seas-1-expedPhase-4-milestone-2",
             "Title": "语言爱好者",
             "Description": "学习外星词汇：0/50",
@@ -1245,7 +1245,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SHIP_RANK",
             "Id": "seas-1-expedPhase-4-milestone-3",
             "Title": "良品飞船",
             "Description": "获取一艘A-Class飞船",
@@ -1266,7 +1266,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STAR_BLUE",
             "Id": "seas-1-expedPhase-4-milestone-4",
             "Title": "蓝色扩张",
             "Description": "访问一颗蓝色恒星",
@@ -1309,7 +1309,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "FIEND_EGG",
             "Id": "seas-1-expedPhase-4-milestone-5",
             "Title": "劫巢者",
             "Description": "偷取低语的卵：0／30",
@@ -1344,7 +1344,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "DISC_SYSTEM",
             "Id": "seas-1-expedPhase-4-milestone-6",
             "Title": "未标记",
             "Description": "发现恒星系：0/35",
@@ -1383,7 +1383,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "RANK_EGUILD",
             "Id": "seas-1-expedPhase-4-milestone-7",
             "Title": "知名探险家",
             "Description": "提升你在探险家公会中的声望：0/30",
@@ -1430,7 +1430,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "DO_ABAND_F",
             "Id": "seas-1-expedPhase-4-milestone-8",
             "Title": "以火洗净",
             "Description": "完全探索荒废货船",
@@ -1540,7 +1540,7 @@
         "DescriptionDone": "完成阶段 V",
         "Milestones": [
           {
-            "MissionId": "",
+            "MissionId": "PARTY_PLANET5",
             "Id": "seas-1-expedPhase-5-milestone-1",
             "Title": "会面点5",
             "Description": "抵达最终的会面点",
@@ -1591,7 +1591,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "EXTREME",
             "Id": "seas-1-expedPhase-5-milestone-2",
             "Title": "幸存者",
             "Description": "探索极端世界：0u/10000u",
@@ -1685,7 +1685,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SENTINEL_KILL",
             "Id": "seas-1-expedPhase-5-milestone-4",
             "Title": "边界失效",
             "Description": "消灭护卫：0/50",
@@ -1714,7 +1714,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "SELL_FOR_CASH",
             "Id": "seas-1-expedPhase-5-milestone-5",
             "Title": "头彩",
             "Description": "在一笔买卖中赚取1000000货币",
@@ -1789,7 +1789,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "ABANDONED_SYS",
             "Id": "seas-1-expedPhase-5-milestone-6",
             "Title": "迷失太空",
             "Description": "发现被废弃的恒星系",
@@ -1824,7 +1824,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "DISC_WAYPOINT",
             "Id": "seas-1-expedPhase-5-milestone-7",
             "Title": "领航员",
             "Description": "星图航路点：0/60",
@@ -1859,7 +1859,7 @@
             ]
           },
           {
-            "MissionId": "",
+            "MissionId": "STORM_CRYSTALS",
             "Id": "seas-1-expedPhase-5-milestone-8",
             "Title": "暴风骤雨",
             "Description": "收集风暴水晶：0/50",
@@ -16123,7 +16123,7 @@
             "Id": "seas-8-expedPhase-1-milestone-1",
             "Title": "日志1：紧急情况",
             "Description": "阅读飞船日志的第一篇",
-            "DescriptionDone": "阅读第一篇日志",
+            "DescriptionDone": "已阅读第一篇日志",
             "Icon": "milestonePatches/PATCH.SHIPLOG1.png",
             "Type": "Normal",
             "Rewards": [
@@ -16185,7 +16185,7 @@
             "MissionId": "FIX_FREIGHTER",
             "Id": "seas-8-expedPhase-1-milestone-2",
             "Title": "全力以赴",
-            "Description": "修理重的货船系统",
+            "Description": "修理重要的货船系统",
             "DescriptionDone": "关键货船系统已修复",
             "Icon": "milestonePatches/PATCH.FREIGHTER2.png",
             "Type": "Normal",
@@ -16558,7 +16558,7 @@
             "Id": "seas-8-expedPhase-2-milestone-1",
             "Title": "日志2：深入幽暗",
             "Description": "阅读飞船日志的第二篇",
-            "DescriptionDone": "阅读二篇日志",
+            "DescriptionDone": "已阅读第二篇日志",
             "Icon": "milestonePatches/PATCH.SHIPLOG2.png",
             "Type": "Normal",
             "Rewards": [
@@ -16985,7 +16985,7 @@
             "Id": "seas-8-expedPhase-3-milestone-1",
             "Title": "日志3：思乡",
             "Description": "阅读飞船日志的第三篇",
-            "DescriptionDone": "阅读第三篇日志",
+            "DescriptionDone": "已阅读第三篇日志",
             "Icon": "milestonePatches/PATCH.SHIPLOG3.png",
             "Type": "Normal",
             "Rewards": [
@@ -17246,7 +17246,7 @@
             "Id": "seas-8-expedPhase-3-milestone-4",
             "Title": "空军中校",
             "Description": "招募%NUM%名驾驶员到你的战团",
-            "DescriptionDone": "3名战团驾驶员已招募",
+            "DescriptionDone": "已招募3名战团驾驶员",
             "Icon": "milestonePatches/PATCH.THREESHIPS.png",
             "Type": "Normal",
             "Rewards": [
@@ -17544,7 +17544,7 @@
             "Id": "seas-8-expedPhase-4-milestone-1",
             "Title": "日志4：不再回头",
             "Description": "阅读飞船日志的第四篇",
-            "DescriptionDone": "阅读第四篇日志",
+            "DescriptionDone": "已阅读第四篇日志",
             "Icon": "milestonePatches/PATCH.SHIPLOG4.png",
             "Type": "Normal",
             "Rewards": [
@@ -17872,7 +17872,7 @@
             "Id": "seas-8-expedPhase-5-milestone-1",
             "Title": "日志5：地平线",
             "Description": "阅读飞船日志的第五篇",
-            "DescriptionDone": "阅读最后一篇日志",
+            "DescriptionDone": "已阅读最后一篇日志",
             "Icon": "milestonePatches/PATCH.SHIPLOG5.png",
             "Type": "Normal",
             "Rewards": [
@@ -18071,8 +18071,8 @@
             "MissionId": "CIV_POD_POI",
             "Id": "seas-8-expedPhase-5-milestone-5",
             "Title": "深眠之途",
-            "Description": "发现一个失落的文明",
-            "DescriptionDone": "与失落者重聚",
+            "Description": "联络",
+            "DescriptionDone": "已与失落者重聚",
             "Icon": "milestonePatches/PATCH.POI.png",
             "Type": "Normal",
             "Rewards": [
@@ -18091,7 +18091,7 @@
             "Id": "seas-8-expedPhase-5-milestone-6",
             "Title": "超光速",
             "Description": "进行重力弹射",
-            "DescriptionDone": "使用黑洞旅行",
+            "DescriptionDone": "已使用虫洞旅行",
             "Icon": "milestonePatches/PATCH.BLACKHOLE.png",
             "Type": "Normal",
             "Rewards": [
